complete Js, edited CSS

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
       <div class="total-container result">
         <h2>Total<span>/ person</span></h2>
         <input type="number" value="" placeholder="$0.00">
-        <p class="billed">
+        <!-- <p class="billed">
           
-        </p>
+        </p> -->
         
       </div>
       <input type="reset" value="RESET" id="btn">
