--- a/index.html
+++ b/index.html
@@ -54,17 +54,15 @@
     <section class="calc-container">
       <div class="tip-amount result">
         <h2>Tip Amount<span>/ person</span></h2>
-        <!-- <input type="number" value="$0.00"> -->
         <p class="tipped">
           $0.00
         </p>
       </div>
       <div class="total-container result">
         <h2>Total<span>/ person</span></h2>
-        <input type="number" value="" placeholder="$0.00">
-        <!-- <p class="billed">
-          
-        </p> -->
+        <p class="billed">
+          $0.00
+        </p>
         
       </div>
       <input type="reset" value="RESET" id="btn">
